# ckan-env

./: .env  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Makefile  README.md  build.sh  ckan-uni-requirements.txt  deploy.sh  docker-compose.yml  requirements.txt
.github/workflows/: publish-develop-image.yml  publish-docker.yml  publish-latest-image.yml  test-build.yml  test-unckan-extension.yml
ckan/: README.md
ckan-2.8/: .env  build.sh  ckan-uni-requirements.txt  docker-compose.yml
ckan-2.8/ckan/docker-entrypoint.d/: 100-start-ckanext-harvest.sh
ckan-2.8/postgresql/: Dockerfile
ckan-2.8/solr/: Dockerfile
ckan-2.9/: .env  docker-compose.sample.yml  docker-compose.yml
ckan-2.9/ckan/: Dockerfile  Dockerfile-prod  ckan-uni-requirements.txt
ckan-2.9/ckan/docker-entrypoint.d/: 100-start-ckanext-harvest.sh
ckan-2.9/ckan/setup/: start_ckan.sh  start_ckan_dev.sh
ckan-2.9/solr/: Dockerfile
ckanext-unckan/: MANIFEST.in  README.md  pyproject.toml  test.ini
ckanext-unckan/ckanext/unckan/: __init__.py  plugin.py
ckanext-unckan/ckanext/unckan/assets/: script.js  webassets.yml
ckanext-unckan/ckanext/unckan/assets/css/: colors.css  unc-fonts.css  unckan.css
ckanext-unckan/ckanext/unckan/helpers/: base.py
ckanext-unckan/ckanext/unckan/templates/: base.html  footer.html  page.html
ckanext-unckan/ckanext/unckan/templates/group/snippets/: helper.html
ckanext-unckan/ckanext/unckan/templates/home/: about.html
ckanext-unckan/ckanext/unckan/templates/home/snippets/: about_text.html
ckanext-unckan/ckanext/unckan/templates/organization/: read_base.html
ckanext-unckan/ckanext/unckan/tests/: test_plugin.py  test_unckan_basic.py
docker/: .env.sample  Makefile  docker-compose-prod-sample.yml  docker-compose.sample.yml
docker/ckan/: Dockerfile  Dockerfile-prod
docker/ckan/files/: ckan.ini
docker/ckan/setup/: prerun.py
docker/postgresql/: Dockerfile
docker/psql/: Dockerfile
docker/psql/docker-entrypoint-initdb.d/: 02_datastore_permissions.sh
docker/solr/: Dockerfile
docs/: README.md  full_config.json
docs/imgs/: ckan-uni-ar-logo.xcf
files/: ckan.ini
files/env/: base.env  prod.env
files/scripts/: build-env-vars.sh  install-os-deps.sh  install-python.sh  prepare-local-dev-extensions.sh
(+18 files in other folders)
